show video next to sketch when webcam on, prevent infinity potential, fix bug where particles do not come from bottom edge when overflowing

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ video {
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
+  border-radius: 12px;
 }
 
 section {
